fix: attempt to fix grid overflow issue.

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,6 @@ body {
 }
 
 .container {
-    height: 100vh;
     display: grid;
     grid-template: 1fr 1fr 5fr 5fr / 1fr 4fr 1fr;
     grid-template-areas: 
@@ -80,7 +79,7 @@ body {
     border: 1px solid var(--main-color);
     border-radius: 5px;
     height: 2.5rem;
-    width: 75%;
+    width: calc(100% - 2.5rem);
     padding: 2px 10px 2px 10px;
     outline: 0;
     background-color: var(--main-color);
@@ -312,6 +311,10 @@ body {
 .article div:nth-child(odd) {
     border-left: 5px solid var(--dark-accent-color);
     box-shadow: 5px 5px 5px rgb(0, 0, 0, 0.2);
+}
+
+.article .card:hover {
+    transform: translateY(-2px);
 }
 
 .article div:nth-child(5) {
